<resources>
    <string name="app_name">Coroutines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="runbyglobalscope">runByGlobalScope</string>
    <string name="runbyrunblocking">runByRunBlocking</string>
    <string name="start2">start</string>
    <string name="next">next</string>
    <string name="star1">*</string>
    <string name="star2">*</string>
    <string name="star3">*</string>
    <string name="star4">*</string>
    <string name="star5">*</string>
    <string name="star6">*</string>
    <string name="star7">*</string>
    <string name="star8">*</string>
    <string name="star9">*</string>
</resources>