<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    tools:context=".CoroutinesImplement">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/st1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:alpha="0"
        android:textSize="@dimen/_100sdp"
        android:textColor="@color/white"
        android:text="@string/star1" />

    <TextView
        android:id="@+id/st2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/_100sdp"
        android:alpha="0"
        android:textColor="@color/white"
        android:text="@string/star2" />
    <TextView
        android:id="@+id/st3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:alpha="0"
        android:textSize="@dimen/_100sdp"
        android:textColor="@color/white"
        android:text="@string/star3" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/st4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:alpha="0"
            android:textSize="@dimen/_100sdp"
            android:textColor="@color/white"
            android:text="@string/star4" />

        <TextView
            android:id="@+id/st5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_100sdp"
            android:alpha="0"
            android:textColor="@color/white"
            android:text="@string/star5" />
        <TextView
            android:id="@+id/st6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:alpha="0"
            android:textSize="@dimen/_100sdp"
            android:textColor="@color/white"
            android:text="@string/star6" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/st7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:alpha="0"
            android:textSize="@dimen/_100sdp"
            android:textColor="@color/white"
            android:text="@string/star7" />

        <TextView
            android:id="@+id/st8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_100sdp"
            android:alpha="0"
            android:textColor="@color/white"
            android:text="@string/star8" />
        <TextView
            android:id="@+id/st9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_100sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:alpha="0"
            android:text="@string/star9" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_9sdp"
        android:text="@string/start2" />
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
    </LinearLayout>
</LinearLayout>